# advent-of-code-2025

./: .gitignore  ALGORITHMS.md  ASM_REALISM.md  CLAUDE.md  CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  README.md  SHARED_ASM.md  cmake_install.cmake  install_all.py  output.txt  run_all.py  scale_input.py
day1/: Main.hi  Main.hs  Manifest.toml  Project.toml  README.md  _precompile.jl  day1  main  main.asm  main.c  main.go  main.jl  main.lisp  main.py  main.rb  main.rs  main.ts  problem.txt  test10.txt
day10/: Cargo.toml  Main.hs  README.md  day10  go.mod  input.txt  main.asm  main.c  main.go  main.jl  main.lisp  main.py  main.rb  main.rs  main.ts  problem.txt
day11/: Main.hi  Main.hs  README.md  day11  debug.c  main.asm  main.c  main.go  main.jl  main.lisp  main.py  main.rb  main.rs  main.ts  problem.txt
day12/: Main.hi  Main.hs  README.md  day12  input.txt  main.asm  main.c  main.go  main.jl  main.lisp  main.py  main.rb  main.rs  main.ts  main_hs  problem.txt
day12c/: day12c  main.c
day2/: Main.hi  Main.hs  README.md  day2  main  main.asm  main.c  main.go  main.jl  main.lisp  main.py  main.rb  main.rs  main.ts  main_c  main_hs  problem.txt
day3/: Main.hi  Main.hs  README.md  day3  input_eric.txt  main.asm  main.c  main.go  main.jl  main.lisp  main.py  main.rb  main.rs  main.ts  main_asm  problem.txt
day4/: Main.hi  Main.hs  README.md  day4  main.asm  main.c  main.go  main.jl  main.lisp  main.py  main.rb  main.rs  main.ts  main_asm  problem.txt
day4c/: day4c  input.txt  inputl.txt  main.c  problem.txt
day5/: Main.hi  Main.hs  README.md  day5  input.txt  main.asm  main.c  main.go  main.jl  main.lisp  main.py  main.rb  main.rs  main.ts  main_asm  main_hs  problem.txt
day6/: Main.hi  Main.hs  README.md  day6  input.txt  main.asm  main.c  (+11 more)
(+57 files in other folders)
